[gd_scene load_steps=12 format=3 uid="uid://b01u8dg3guwjo"]

[ext_resource type="Script" uid="uid://3gwf1ek7bejj" path="res://scenes/minigames/aiCaptcha_minigame/ai_captcha_minigame.gd" id="1_pn6yj"]
[ext_resource type="Texture2D" uid="uid://csneuimka5l7x" path="res://imports/assets/aiCaptcha/arrow1.png" id="2_7dba6"]
[ext_resource type="Texture2D" uid="uid://dk5yhv6mof02w" path="res://imports/assets/aiCaptcha/arrow2.png" id="3_mslad"]
[ext_resource type="Texture2D" uid="uid://d064g62sllvhb" path="res://imports/assets/aiCaptcha/arrow3.png" id="4_ja6fu"]
[ext_resource type="Texture2D" uid="uid://cswderrtebroq" path="res://imports/assets/aiCaptcha/arrow4.png" id="5_mjoad"]
[ext_resource type="Texture2D" uid="uid://butehggmhy4ri" path="res://imports/assets/aiCaptcha/arrow5.png" id="6_yjln6"]
[ext_resource type="Texture2D" uid="uid://csi4twdjlmybh" path="res://imports/assets/aiCaptcha/arrow6.png" id="7_a7a1i"]
[ext_resource type="Texture2D" uid="uid://bhyni58iq700c" path="res://imports/assets/aiCaptcha/arrow7.png" id="8_mr8a4"]
[ext_resource type="Texture2D" uid="uid://cbivadluxsbii" path="res://imports/assets/aiCaptcha/arrow8.png" id="9_bxvag"]
[ext_resource type="Texture2D" uid="uid://ccexy1b1rorpl" path="res://imports/assets/aiCaptcha/controlls/turnClock.png" id="10_mslad"]
[ext_resource type="Texture2D" uid="uid://c8sdtst2vdwr4" path="res://imports/assets/aiCaptcha/controlls/turnAntiClock.png" id="11_ja6fu"]

[node name="Ai-Captcha_minigame" type="Node"]
script = ExtResource("1_pn6yj")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 361.0
offset_top = 31.0
offset_right = 630.0
offset_bottom = 331.0
scale = Vector2(1.69931, 1.76521)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 499.0
offset_top = 102.0
offset_right = 673.0
offset_bottom = 430.0

[node name="Arrow1" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("2_7dba6")

[node name="Arrow2" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("3_mslad")

[node name="Arrow3" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("4_ja6fu")

[node name="Arrow4" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("5_mjoad")

[node name="Arrow5" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("6_yjln6")

[node name="Arrow6" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("7_a7a1i")

[node name="Arrow7" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("8_mr8a4")

[node name="Arrow8" type="Sprite2D" parent="."]
position = Vector2(586, 183)
scale = Vector2(3, 3)
texture = ExtResource("9_bxvag")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(586, 329)
scale = Vector2(1.69931, 1.76521)

[node name="Arrow1" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("2_7dba6")

[node name="Arrow2" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("3_mslad")

[node name="Arrow3" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("4_ja6fu")

[node name="Arrow4" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("5_mjoad")

[node name="Arrow5" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("6_yjln6")

[node name="Arrow6" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("7_a7a1i")

[node name="Arrow7" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("8_mr8a4")

[node name="Arrow8" type="Sprite2D" parent="Node2D"]
scale = Vector2(2, 2)
texture = ExtResource("9_bxvag")

[node name="turnLeft" type="Button" parent="Node2D"]
custom_minimum_size = Vector2(50, 59)
offset_left = -128.876
offset_top = -28.8918
offset_right = -56.8761
offset_bottom = 43.1082
icon = ExtResource("10_mslad")
metadata/_edit_use_anchors_ = true

[node name="turnRight" type="Button" parent="Node2D"]
custom_minimum_size = Vector2(50, 59)
offset_left = 61.7899
offset_top = -31.1578
offset_right = 133.79
offset_bottom = 40.8422
icon = ExtResource("11_ja6fu")
metadata/_edit_use_anchors_ = true

[node name="match" type="Label" parent="Node2D"]
offset_left = -25.8929
offset_top = -161.454
offset_right = 28.1071
offset_bottom = -112.454
text = "match!
"
metadata/_edit_use_anchors_ = true

[node name="submit" type="Button" parent="Node2D"]
offset_left = -31.1892
offset_top = 82.1432
offset_right = 30.8108
offset_bottom = 113.143
text = "submit"
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="Node2D/turnLeft" to="." method="_on_turn_left_button_up"]
[connection signal="button_up" from="Node2D/turnRight" to="." method="_on_turn_right_button_up"]
[connection signal="button_up" from="Node2D/submit" to="." method="_on_submit_button_up"]
